fix: overflow from burger-menu

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -32,32 +32,7 @@ body {
   padding: 0 20px;
 }
 
-.slick-dots {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 0px;
 
-	li {
-		margin: 0 15px;
-	}
-	
-	li.slick-active {
-		button {
-			background-color: $secondary-color--light;
-			border: 1px solid $primary-color;
-		}
-	}
-
-	button {
-		background-color: $primary-color;
-		border: none;
-		width: 8px;
-		height: 8px;
-		border-radius: 50%;
-		padding: 0;
-	}
-}
 
 
 
